--- a/0-intro-to-quarto/0-intro-to-quarto.qmd
+++ b/0-intro-to-quarto/0-intro-to-quarto.qmd
@@ -8,7 +8,7 @@ author:
   - name: Isabella Velásquez
     affiliations:
       - name: Posit, PBC
-footer: "[pos.it/small-data-sf-quarto-workshop](https://pos.it/small-data-sf-quarto-workshop)"
+footer: "[pos.it/smalldatasf-quarto-workshop](https://pos.it/smalldatasf-quarto-workshop)"
 logo: "../images/slides-logo.png"
 format:
   revealjs:
@@ -144,39 +144,17 @@ We'll teach you
 
 -   During **our turn** segments -- also feel free to raise your hand for questions but if your question seems specific to your setup, we might come around and help during the next your turn break
 
-## Setup {.smaller}
-
-::: task
-**1. Software:** Download and install Python and the latest version of Quarto:
-
--   Python 3: <https://www.python.org/downloads/>
--   Quarto 1.5.57: <https://quarto.org/docs/get-started/>
-
-**2. Tools:** Dowload and install VS Code and Jupyter and the Quarto extensions:
-
-- VS Code: <https://code.visualstudio.com/>
-- Quarto Extension: <https://marketplace.visualstudio.com/items?itemName=quarto.quarto>
-- Jupyter Extension: <https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter>
-
-:::
-
-## Setup, continued {.smaller}
-
-::: task
-
-**3. Exercises:** Go to [`pos.it/smalldatasf-quarto-exercises`](https://pos.it/smalldatasf-quarto-exercises), click on *Use this template* then *Create a new repository*.
-
-**4. Packages:**  Open *VS Code*. Under *Start*, click on *Clone Git Repository*, and paste the URL of your exercise repo. 
-
-  * Open the cloned project. In the Command Palette, go to `Python: Create Environment...` and choose `Venv`, then choose the (latest) Python version you have installed. 
-  * Check the box for `requirements.txt` in the *Select dependencies to install* menu and hit *OK*.
-
-:::
-
-. . .
+## A tour of Quarto
 
 ::: {.hand-blue-large style="text-align: center;"}
-Let's get started!
+Sit back and enjoy!
+:::
+
+::: demo
+-   Understanding the relationship between Quarto and the Jupyter engine
+-   Using Quarto in VS Code
+-   Creating Quarto documents (metadata, markdown text, and code)
+-   Working with Quarto projects
 :::
 
 # What is Quarto?
@@ -185,7 +163,7 @@ Let's get started!
 
 is an innovative, open-source scientific and technical publishing system compatible with Jupyter Notebooks and other popular media.
 
-![Artwork from "Hello, Quarto" keynote by Julia Lowndes and Mine Çetinkaya-Rundel, presented at RStudio Conference 2022. Illustrated by Allison Horst.](images/horst-quarto-schematic.png){fig-alt="A schematic representing the multi-language input (e.g. Python, R, Observable, Julia) and multi-format output (e.g. PDF, html, Word documents, and more) versatility of Quarto." fig-align="center"}
+![](images/demo-quarto.png){width=75% fig-align="center"}
 
 ## With Quarto ...
 
@@ -202,9 +180,6 @@ you can **weave** together **narrative** and **code** to produce elegantly forma
 ::: task
 Where does the name "Quarto" come from?
 :::
-
-. . .
-
 
 [Quarto on Wikipedia](https://en.wikipedia.org/wiki/Quarto){preview-link="true"}
 
@@ -254,19 +229,6 @@ Source: <https://en.wikipedia.org/wiki/Quarto>
 | Dashboards       | [Dashboards](https://quarto.org/docs/dashboards/)                                                                                                                                                           |
 
 : {tbl-colwidths="\[25,75\]"}
-
-## A tour of Quarto
-
-::: {.hand-blue-large style="text-align: center;"}
-Sit back and enjoy!
-:::
-
-::: demo
--   Understanding the relationship between Quarto and the Jupyter engine
--   Using Quarto in VS Code
--   Creating Quarto documents (metadata, markdown text, and code)
--   Working with Quarto projects
-:::
 
 # How it works
 
@@ -339,8 +301,8 @@ command.
 For example:
 
 ```{.bash filename="Terminal"}
-quarto convert basics-jupyter.ipynb # converts to qmd
-quarto convert basics-jupyter.qmd   # converts to ipynb
+quarto convert my-document.ipynb # converts to qmd
+quarto convert my-document.qmd   # converts to ipynb
 ```
 
 # Quarto and VS Code
@@ -348,18 +310,47 @@ quarto convert basics-jupyter.qmd   # converts to ipynb
 ## From the comfort of your own ~~home~~workspace
 
 ::: r-stack
+![](https://quarto.org/docs/tools/images/rstudio-preview.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside RStudio" width="900"}
+
 ![](https://quarto.org/docs/tools/images/jupyterlab-preview.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside JupyterLab" width="900"}
 
 ![](https://quarto.org/docs/computations/images/python-vscode.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside VSCode" width="900"}
 
-![](https://quarto.org/docs/tools/images/rstudio-preview.png){.fragment fig-alt="A screenshot of a Quarto document rendered inside RStudio" width="900"}
 :::
 
-## Rendering
+## Quarto VS Code extension
+
+::: incremental
+
+-   Integrated render and preview for Quarto documents.
+-   Syntax highlighting for markdown and embedded languages
+-   Completion and diagnostics for YAML options
+-   Completion for embedded languages (e.g. Python, R, Julia, etc.)
+-   Commands and key-bindings for running cells and selected lines
+
+:::
+
+## Previewing and rendering
+
+![](images/demo-quarto.png){fig-align="center"}
+
+## Previewing and rendering
+
+![](images/demo-quarto-left.png){fig-align="center"}
+
+## Previewing and rendering
+
+![](images/demo-quarto-right.png){fig-align="center"}
+
+## Previewing
 
 **in VS Code**
 
--   Option 1: In the Terminal via `quarto render`
+-   Option 1: In the Terminal via `quarto preview`
+
+```{.bash filename="Terminal"}
+quarto preview my-document.qmd
+```
 
 . . .
 
@@ -369,7 +360,61 @@ quarto convert basics-jupyter.qmd   # converts to ipynb
 
 -   Option 3: <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + K
 
-# Documents to projects
+
+
+## Rendering
+
+**in VS Code**
+
+-   Option 1: In the Terminal via `quarto render`
+
+```{.bash filename="Terminal"}
+quarto render
+```
+
+. . .
+
+-   Option 2: Use the Command Palette: **Quarto: Render Project**
+
+## Your turn {.smaller}
+
+::: task
+**1. Software:** Download and install Python and the latest version of Quarto:
+
+-   Python 3: <https://www.python.org/downloads/>
+-   Quarto 1.5.57: <https://quarto.org/docs/get-started/>
+
+**2. Tools:** Dowload and install VS Code and Jupyter and the Quarto extensions:
+
+- VS Code: <https://code.visualstudio.com/>
+- Quarto Extension: <https://marketplace.visualstudio.com/items?itemName=quarto.quarto>
+- Jupyter Extension: <https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter>
+
+:::
+
+## Your turn {.smaller}
+
+::: task
+
+**3. Exercises:** Go to [`pos.it/smalldatasf-quarto-exercises`](https://pos.it/smalldatasf-quarto-exercises), click on *Use this template* then *Create a new repository*.
+
+**4. Packages:**  Open *VS Code*. Under *Start*, click on *Clone Git Repository*, and paste the URL of your exercise repo. 
+
+  * Open the cloned project. In the Command Palette, go to `Python: Create Environment...` and choose `Venv`, then choose the (latest) Python version you have installed. 
+  * Check the box for `requirements.txt` in the *Select dependencies to install* menu and hit *OK*.
+
+See full instructions under **Setup**: [pos.it/smalldatasf-quarto-workshop](https://pos.it/smalldatasf-quarto-workshop)
+
+**Then:** In VS Code, open the `olympicdash-0.ipynb` file. 
+
+-   Convert the file to `.qmd` using `quarto convert`.
+
+-   Preview the `.qmd` file.
+
+:::
+
+
+# Quarto documents
 
 ## Anatomy of a Quarto document
 
@@ -392,9 +437,9 @@ Three components:
 :::: columns
 ::: {.column .fragment}
 
-````md
+````{.markdown filename="my-document.qmd"}
 ---
-title: "My first Quarto dashboard"
+title: "Olympic Games"
 format: html
 ---
 ````
@@ -412,32 +457,11 @@ format: html
 
 ## Anatomy of a Quarto document
 
-**Metadata: YAML**
-
-:::: columns
-::: {.column}
-
-````{.markdown code-line-numbers=4}
----
-title: "My first Quarto dashboard"
-format: html
-theme: sketchy
----
-````
-:::
-
-::: {.column .fragment}
-![](images/sketchy.png)
-:::
-::::
-
-## Anatomy of a Quarto document
-
 **Text: Markdown**
 
-````md
+````{.markdown filename="my-document.qmd"}
 ---
-title: "My first Quarto dashboard"
+title: "Olympic Games"
 format: html
 ---
 
@@ -470,7 +494,7 @@ The `penguins` data from the [**palmerpenguins**](https://allisonhorst.github.io
 **Text: Markdown**
 
 +-----------------------------------+-------------------------------+
-| Markdown Syntax                   | Output                        |
+| Markdown syntax                   | Output                        |
 +===================================+===============================+
 |     *italics* and **bold**        | *italics* and **bold**        |
 +-----------------------------------+-------------------------------+
@@ -485,9 +509,9 @@ The `penguins` data from the [**palmerpenguins**](https://allisonhorst.github.io
 
 **Code**
 
-````{.markdown code-line-numbers=|8-16}
+````{.markdown filename="my-document.qmd" code-line-numbers=|8-16}
 ---
-title: "My first Quarto dashboard"
+title: "Olympic Games"
 format: html
 ---
 
@@ -514,7 +538,7 @@ from plotnine.data import mpg
 
 ````{.markdown code-line-numbers=8-16}
 ---
-title: "My first Quarto dashboard"
+title: "Olympic Games"
 format: html
 ---
 
@@ -547,7 +571,7 @@ from plotnine.data import mpg
 
 ````{.markdown code-line-numbers=|9}
 ---
-title: "My first Quarto dashboard"
+title: "Olympic Games"
 format: html
 ---
 
@@ -572,7 +596,7 @@ from plotnine.data import mpg
 
 ````{.markdown code-line-numbers=9-10}
 ---
-title: "My first Quarto dashboard"
+title: "Olympic Games"
 format: html
 ---
 
@@ -592,17 +616,30 @@ from plotnine.data import mpg
 
 ````
 
+## Anatomy of a Quarto document
+
+**Inline code** executes code *within Markdown*
+
+````{.markdown filename="my-document.qmd"}
+```{{python}}
+radius = 5
+```
+
+The radius of the circle is `{python} radius`
+````
+
+Results in:
+
+The radius of the circle is 5.
+
 ## Your turn {.smaller}
 
+In VS Code, open the `olympicdash-0.qmd` file. 
+
 ::: task
-In VS Code, open the `olympicdash-0.ipynb` file. 
-
--   Convert the file to `.qmd` using `quarto convert`.
-Preview the file.
-
 -   In the YAML, add an `author` field and add your name.
 
--   Add a markdown cell and write some text.
+-   Add some Markdown text to the document.
 
 -   For one of the tables, add the chunk option `echo: false`.
 
@@ -615,13 +652,236 @@ olympics['medal'] = pd.Categorical(
     ordered=True
 )
 ```
-
--   Change the html theme to `sketchy`. (See <https://quarto.org/docs/output-formats/html-themes.html> for documentation on HTML theming.)
 :::
+
+Save in between each step and see how the preview changes.
 
 ```{r}
 countdown(minutes = 10)
 ```
+
+# Authoring Quarto
+
+## Images and links
+
++------------------------------------+---------------------------------+
+| Markdown syntax                    | Output                          |
++====================================+=================================+
+|     <https://quarto.org>           | <https://quarto.org>            |
++------------------------------------+---------------------------------+
+|     [Quarto](https://quarto.org)   | [Quarto](https://quarto.org)    |
++------------------------------------+---------------------------------+
+|     ![](penguin.jpg)               | ![](penguin.jpg)                |
++------------------------------------+---------------------------------+
+
+## Tables
+
+### Tables
+
+``` {{markdown}}
+| Right | Left | Default | Center |
+|------:|:-----|---------|:------:|
+|    12 | 12   | 12      |   12   |
+|   123 | 123  | 123     |  123   |
+|     1 | 1    | 1       |   1    |
+```
+
+| Right | Left | Default | Center |
+|------:|:-----|---------|:------:|
+|    12 | 12   | 12      |   12   |
+|   123 | 123  | 123     |  123   |
+|     1 | 1    | 1       |   1    |
+
+## Divs and Spans
+
+You can add classes, attributes, and other identifiers to content using Divs and Spans.
+
+**Divs**
+
+    ::: {.border}
+    This content can be styled with a border
+    :::
+
+**Spans**
+
+    [This is *some text*]{.class key="val"}
+
+## Divs
+
+**Callout blocks**
+
+```{.markdown filename="my-document.qmd"}
+:::{.callout-tip}
+
+Note that there are five types of callouts, including: 
+`note`, `tip`, `warning`, `caution`, and `important`.
+
+:::
+```
+
+. . .
+
+::: callout-tip
+Note that there are five types of callouts, including: `note`, `tip`, `warning`, `caution`, and `important`.
+:::
+
+## Divs
+
+**Multiple columns**
+
+```{.markdown filename="my-document.qmd"}
+::: {layout-ncol=2}
+
+![](penguin.jpg)
+
+Photo by <a href="https://unsplash.com/@corneliusventures?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cornelius Ventures</a> on <a href="https://unsplash.com/s/photos/penguin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+:::
+```
+
+. . .
+
+::: {layout-ncol="2"}
+![](penguin.jpg)
+
+Photo by <a href="https://unsplash.com/@corneliusventures?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cornelius Ventures</a> on <a href="https://unsplash.com/s/photos/penguin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+:::
+
+
+## Divs
+
+**Tabsets**
+
+```{.markdown filename="my-document.qmd"}
+::: {.panel-tabset group="language"}
+## R
+
+`library(dplyr)`
+
+## Python
+
+`import pandas as pd`
+:::
+```
+
+::: {.panel-tabset group="language"}
+## R
+
+`library(dplyr)`
+
+## Python
+
+`import pandas as pd`
+:::
+
+## Spans
+
+```{.markdown filename="my-document.qmd"}
+This is text that is [red]{style="color:red;"}.
+```
+
+. . .
+
+This is text that is [red]{style="color:red;"}.
+
+```{.markdown filename="my-document.qmd"}
+![](penguin.jpg){fig-alt="A photo of a penguin jumping"}
+```
+
+![](penguin.jpg){fig-alt="A photo of a penguin jumping"}
+
+## Theming
+
+:::: columns
+::: {.column}
+
+````{.markdown code-line-numbers=4 filename="my-document.qmd"}
+---
+title: "Olympic Games"
+format: html
+theme: sketchy
+---
+````
+:::
+
+::: {.column .fragment}
+![](images/sketchy.png)
+:::
+::::
+
+## Your turn {.smaller}
+
+-   Change the html theme to `sketchy`. (See <https://quarto.org/docs/output-formats/html-themes.html> for documentation on HTML theming.)
+
+-   Edit the Markdown text you wrote in the previous exercise so that one of the words is blue.
+
+-   Add a code chunk cell with the option `include: false`. Use the dataset to find the most gold medals by team.
+
+-   Use inline code to write a sentence such as: "The most gold medals won by a single team are [count]."
+
+-   Add a Div of your choice.
+
+```{r}
+countdown(minutes = 10)
+```
+
+# Changing formats
+
+## Changing formats
+
+:::: columns
+::: {.column}
+
+````{.markdown code-line-numbers=3 filename="my-document.qmd"}
+---
+title: "Olympic Games"
+format: revealjs
+---
+````
+:::
+
+::: {.column .fragment}
+![](images/revealjs.png)
+:::
+::::
+
+## Changing formats
+
+:::: columns
+::: {.column}
+
+````{.markdown code-line-numbers=3 filename="my-document.qmd"}
+---
+title: "Olympic Games"
+format: pdf
+---
+````
+:::
+
+::: {.column .fragment}
+![](images/pdf.png)
+:::
+::::
+
+## Changing formats
+
+:::: columns
+::: {.column}
+
+````{.markdown code-line-numbers=3 filename="my-document.qmd"}
+---
+title: "Olympic Games"
+format: dashboard
+theme: sketchy
+---
+````
+:::
+
+::: {.column .fragment}
+![](images/dashboard.png)
+:::
+::::
+
+# Documents to projects
 
 ## Anatomy of a Quarto project
 
@@ -658,561 +918,80 @@ A YAML file with particular keys and values that Quarto recognizes. Unrecognized
 
 ``` {.yaml .fragment filename="_quarto.yml"}
 project:
-  title: "A Barebones Project"
+  title: "Olympic Games"
 ```
 
 ## \_quarto.yml {auto-animate="true"}
 
 A YAML file with particular keys and values that Quarto recognizes. Unrecognized keys are ignored.
 
-``` {.yaml filename="_quarto.yml" code-line-numbers="1-20|528-548"}
+``` {.yaml filename="_quarto.yml"}
 project:
   type: website
-  output-dir: _site
+  output-dir: docs
   resources:
-    - "/docs/download/_download.json"
-    - "/docs/download/_prerelease.json"
-    - "/_redirects"
+    - images/python-logo.png
 
 website:
-  title: "Quarto"
-  image: "quarto-dark-bg.jpeg"
-  favicon: "favicon.png"
-  google-analytics: "G-FV9Z7SDZ0M"
-  open-graph: true
-  twitter-card: true
-  site-url: https://quarto.org
-  repo-url: https://github.com/quarto-dev/quarto-web
-  issue-url: https://github.com/quarto-dev/quarto-cli/issues/new/choose
-  repo-actions: [edit, issue]
   page-navigation: true
-  bread-crumbs: true
-  search:
-    show-item-context: true
-    type: overlay
-    algolia:
-      index-name: prod_QUARTO
-      application-id: ZPJB5I1QN7
-      search-only-api-key: 41be6c1e0a7fea4a51b107810facf577
-      analytics-events: true
-      show-logo: true
-  page-footer:
-    left: |
-      Proudly supported by
-      [![](https://www.rstudio.com/assets/img/posit-logo-fullcolor-TM.svg){fig-alt="Posit" width=65px}](https://posit.co)
-    center:
-      - text: "About"
-        href: about.qmd
-      - text: "FAQ"
-        href: docs/faq/index.qmd
-      - text: "License"
-        href: license.qmd
-      - text: "Trademark"
-        href: trademark.qmd
-    right:
-      - icon: twitter
-        href: https://twitter.com/quarto_pub
-        aria-label: Quarto Twitter
-      - icon: github
-        href: https://github.com/quarto-dev/quarto-cli
-        aria-label: Quarto GitHub
-      - icon: rss
-        href: https://quarto.org/docs/blog/index.xml
-        aria-label: Quarto Blog RSS        
-  navbar:
-    background: light
-    logo: quarto.png
-    logo-alt: "Quarto logo."
-    title: false
-    collapse-below: lg
-    left:
-      - text: "Overview"
-        href: index.qmd
-      - text: "Get Started"
-        href: docs/get-started/index.qmd
-      - text: "Guide"
-        href: docs/guide/index.qmd
-      - text: Extensions
-        href: docs/extensions/index.qmd
-      - text: "Reference"
-        href: docs/reference/index.qmd
-      - text: "Gallery"
-        href: docs/gallery/index.qmd
-      - text: "Blog"
-        href: docs/blog/index.qmd
-      - text: "Help"
-        menu:
-          - text: "Report a Bug"
-            icon: "bug"
-            href: "https://github.com/quarto-dev/quarto-cli/issues"
-          - text: "Ask a Question"
-            icon: "chat-right-text"
-            href: "https://github.com/quarto-dev/quarto-cli/discussions"
-          - text: "FAQ"
-            icon: "question-circle"
-            href: docs/faq/index.qmd
-    tools:
-      - icon: twitter
-        href: https://twitter.com/quarto_pub
-        text: Quarto Twitter
-      - icon: github
-        href: https://github.com/quarto-dev/quarto-cli
-        text: Quarto GitHub
-      - icon: rss
-        href: https://quarto.org/docs/blog/index.xml
-        text: Quarto Blog RSS        
+  title: "From Notebooks to Dashboards with Quarto"
+  description: "Small Data SF - From Notebooks to Dashboards with Quarto Workshop"
+
+  repo-url: https://github.com/posit-dev/small-data-sf-quarto-workshop
+  repo-actions: [edit, issue]
+
+  open-graph: true
 
   sidebar:
-    - id: get-started
-      title: "Get Started"
-      style: "floating"
-      collapse-level: 2
-      align: left
-      contents:
-        - docs/get-started/index.qmd
-        - text: "Tutorial: Hello, Quarto"
-          href: docs/get-started/hello/
-        - text: "Tutorial: Computations"
-          href: docs/get-started/computations/
-        - text: "Tutorial: Authoring"
-          href: docs/get-started/authoring/
+    background: "#FF6349"
+    logo: "images/logo.png"
+    pinned: true
+    align: center
+    tools:
+      - icon: github
+        href: https://github.com/posit-dev/small-data-sf-quarto-workshop
+        text: "GitHub"
+      - icon: code-square
+        href: https://posit.cloud
+        text: "Posit Cloud"
 
-    - id: guide
-      collapse-level: 1
-      contents:
-        - section: "Guide"
-          href: docs/guide/index.qmd
-          contents:
-          - section: "Authoring"
-            contents:
-              - docs/authoring/markdown-basics.qmd
-              - docs/authoring/figures.qmd
-              - docs/authoring/tables.qmd
-              - docs/authoring/diagrams.qmd
-              - docs/authoring/videos.qmd
-              - text: "Jupyter Notebooks"
-                href: docs/authoring/notebook-embed.qmd
-              - docs/authoring/callouts.qmd
-              - docs/authoring/code-annotation.qmd
-              - docs/authoring/article-layout.qmd
-              - section: "Scholarly Writing"
-                contents:
-                  - docs/authoring/front-matter.qmd
-                  - docs/authoring/title-blocks.qmd
-                  - docs/authoring/footnotes-and-citations.qmd
-                  - docs/authoring/cross-references.qmd
-                  - docs/authoring/create-citeable-articles.qmd
-                  - docs/authoring/appendices.qmd
-          - section: "Computations"
-            contents:
-              - docs/computations/python.qmd
-              - docs/computations/r.qmd
-              - docs/computations/julia.qmd
-              - docs/computations/ojs.qmd
-              - docs/computations/execution-options.qmd
-              - docs/computations/parameters.qmd
-          - section: "Tools"
-            contents:
-              - section: "JupyterLab"
-                contents:
-                  - text: "JupyterLab Basics"
-                    href: docs/tools/jupyter-lab.qmd
-                  - text: "JupyterLab Extension"
-                    href: docs/tools/jupyter-lab-extension.qmd
-              - section: "RStudio IDE"
-                contents: 
-                  - text: "RStudio Basics"
-                    href: docs/tools/rstudio.qmd
-                  - section: "Visual Editor"
-                    href: docs/visual-editor/index.qmd
-                    contents:
-                      - text: Editor Basics
-                        href: docs/visual-editor/index.qmd
-                      - docs/visual-editor/technical.qmd
-                      - docs/visual-editor/content.qmd
-                      - docs/visual-editor/options.qmd
-                      - docs/visual-editor/markdown.qmd
-              - section: "VS Code"
-                href: docs/tools/vscode.qmd
-                contents:
-                  - text: "VS Code Basics"
-                    href: docs/tools/vscode.qmd
-                  - text: "Visual Editor"
-                    href: docs/visual-editor/vscode/index.qmd
-                  - text: "Notebook Editor"
-                    href: docs/tools/vscode-notebook.qmd
-                
-              - docs/tools/neovim.qmd
-              - docs/tools/text-editors.qmd
-          - section: "Documents"
-            contents:
-              - section: "HTML"
-                contents:
-                  - docs/output-formats/html-basics.qmd
-                  - docs/output-formats/html-code.qmd
-                  - docs/output-formats/html-themes.qmd
-                  - docs/output-formats/html-multi-format.qmd
-                  - docs/output-formats/html-publishing.qmd
-              - section: "PDF"
-                contents:
-                  - docs/output-formats/pdf-basics.qmd
-                  - docs/output-formats/pdf-engine.qmd
-              - section: "MS Word"
-                contents:
-                  - docs/output-formats/ms-word.qmd
-                  - docs/output-formats/ms-word-templates.qmd
-              - section: "Markdown"
-                contents:
-                  - docs/output-formats/gfm.qmd
-                  - docs/output-formats/hugo.qmd
-                  - docs/output-formats/docusaurus.qmd
-              - docs/output-formats/all-formats.qmd
-          - section: "Presentations"
-            contents:
-              - text: "Overview"
-                href: docs/presentations/index.qmd
-              - section: docs/presentations/revealjs/index.qmd
-                contents:
-                  - text: "Reveal Basics"
-                    href: docs/presentations/revealjs/index.qmd
-                  - docs/presentations/revealjs/presenting.qmd
-                  - docs/presentations/revealjs/advanced.qmd
-                  - docs/presentations/revealjs/themes.qmd
-              - docs/presentations/powerpoint.qmd
-              - docs/presentations/beamer.qmd
-          - section: "Websites"
-            href: docs/websites/website-basics.qmd
-            contents:
-              - docs/websites/website-basics.qmd
-              - docs/websites/website-navigation.qmd
-              - docs/websites/website-blog.qmd
-              - docs/websites/website-search.qmd
-              - docs/websites/website-tools.qmd
-              - docs/websites/website-about.qmd
-              - section: "Listing Pages"
-                href: docs/websites/website-listings.qmd
-                contents:
-                  - docs/websites/website-listings.qmd
-                  - docs/websites/website-listings-custom.qmd
-          - section: "Books"
-            href: docs/books/book-basics.qmd
-            contents:
-              - docs/books/book-basics.qmd
-              - docs/books/book-structure.qmd
-              - docs/books/book-crossrefs.qmd
-              - text: "Customizing Output"
-                href: docs/books/book-output.qmd
-          - section: "Interactivity"
-            contents:
-              - text: "Overview"
-                href: docs/interactive/index.qmd
-              - section: docs/interactive/ojs/index.qmd
-                contents:
-                  - text: "Introduction"
-                    href: docs/interactive/ojs/index.qmd
-                  - docs/interactive/ojs/libraries.qmd
-                  - docs/interactive/ojs/data-sources.qmd
-                  - docs/interactive/ojs/ojs-cells.qmd
-                  - docs/interactive/ojs/shiny.qmd
-                  - docs/interactive/ojs/code-reuse.qmd
-                  - section: "Examples"
-                    contents:
-                      - docs/interactive/ojs/examples/penguins.qmd
-                      - docs/interactive/ojs/examples/sunburst.qmd
-                      - docs/interactive/ojs/examples/arquero.qmd
-                      - docs/interactive/ojs/examples/population.qmd
-                      - docs/interactive/ojs/examples/noaa-co2.qmd
-                      - docs/interactive/ojs/examples/github.qmd
-                      - docs/interactive/ojs/examples/layout.qmd
-                      - section: "Shiny"
-                        contents:
-                          - text: "K-Means"
-                            href: https://jjallaire.shinyapps.io/kmeans-shiny-ojs/
-                          - text: "Binning"
-                            href: https://jjallaire.shinyapps.io/binning-shiny-ojs/
-                          - text: "Data Binding"
-                            href: https://jjallaire.shinyapps.io/data-shiny-ojs/
-                          - text: "Covid Map"
-                            href: https://jjallaire.shinyapps.io/covid19-bicartogram/
-              - section: docs/interactive/shiny/index.qmd
-                contents:
-                  - text: "Introduction"
-                    href: docs/interactive/shiny/index.qmd
-                  - docs/interactive/shiny/running.qmd
-                  - docs/interactive/shiny/execution.qmd
-                  - docs/interactive/shiny/resources.qmd
-                  - section: "Examples"
-                    contents:
-                      - text: "Old Faithful"
-                        href: https://jjallaire.shinyapps.io/shiny-old-faithful/
-                      - text: "K-Means"
-                        href: https://jjallaire.shinyapps.io/shiny-k-means/
-                      - text: "Diamonds"
-                        href: https://jjallaire.shinyapps.io/shiny-diamonds/
-              - section: "Widgets"
-                contents:
-                  - docs/interactive/widgets/jupyter.qmd
-                  - docs/interactive/widgets/htmlwidgets.qmd
-              - docs/interactive/layout.qmd
-          - section: "Publishing"
-            contents:
-              - docs/publishing/index.qmd
-              - docs/publishing/quarto-pub.qmd
-              - docs/publishing/github-pages.qmd
-              - docs/publishing/rstudio-connect.qmd
-              - docs/publishing/netlify.qmd
-              - docs/publishing/confluence.qmd
-              - docs/publishing/other.qmd
-              - text: "Publishing with CI"
-                href: docs/publishing/ci.qmd
-          - section: "Projects"
-            contents:
-              - docs/projects/quarto-projects.qmd
-              - docs/projects/code-execution.qmd
-              - docs/projects/profiles.qmd
-              - docs/projects/environment.qmd
-              - docs/projects/scripts.qmd
-              - docs/projects/virtual-environments.qmd
-          - section: "Advanced"
-            contents:
-              - docs/authoring/includes.qmd
-              - docs/authoring/variables.qmd
-              - docs/output-formats/page-layout.qmd
-              - docs/authoring/language.qmd
-              - docs/authoring/conditional.qmd
-              - docs/extensions/nbfilter.qmd
-    - id: extensions
-      title: "Extensions"
-      contents:
-        - "---"
-        - section: docs/extensions/index.qmd
-          contents: 
-            - text: "Shortcodes & Filters"
-              href: docs/extensions/listing-filters.qmd
-            - text: "Journal Articles"
-              href: docs/extensions/listing-journals.qmd
-            - text: "Custom Formats"
-              href: docs/extensions/listing-formats.qmd
-            - text: "Revealjs Extensions"
-              href: docs/extensions/listing-revealjs.qmd
-            - docs/extensions/managing.qmd
-        - "---"
-        - section: docs/extensions/creating.qmd
-          contents:
-            - text: "Overview"
-              href: docs/extensions/creating.qmd
-            - docs/extensions/lua.qmd
-            - docs/extensions/lua-api.qmd
-            - text: "Distribution"
-              href: docs/extensions/distributing.qmd
-            - "---"
-            - text: "Shortcodes"
-              href: docs/extensions/shortcodes.qmd
-            - text: "Filters"
-              href: docs/extensions/filters.qmd
-            - section: "Journal Articles"
-              href: docs/journals/formats.qmd
-              contents:
-                - docs/journals/formats.qmd
-                - docs/journals/templates.qmd
-                - docs/journals/authors.qmd
-            - docs/extensions/formats.qmd
-            - docs/extensions/revealjs.qmd
-            - docs/extensions/project-types.qmd
-            - docs/extensions/starter-templates.qmd
-    - id: manuscripts
-      title: "Manuscripts"
-      style: "floating"
-      collapse-level: 2
-      align: left
-      contents:
-        - text: Manuscripts Overview
-          href: docs/manuscripts/index.qmd
-        - text: "Authoring Manuscripts"
-          contents: 
-            - text: Jupyter Lab
-              href: docs/manuscripts/authoring/jupyterlab.qmd
-            - text: VS Code
-              href: docs/manuscripts/authoring/vscode.qmd
-            - text: RStudio
-              href: docs/manuscripts/authoring/rstudio.qmd
-        - text: "Publishing Manuscripts"
-          href: docs/manuscripts/publishing.qmd
-        - text: "Next Steps"
-          href: docs/manuscripts/next-steps.qmd
-        - text: "---"
-        - text: "Manuscript Components"
-          href: docs/manuscripts/components.qmd
-          
-        
-    - id: reference
-      title: "Reference"
-      collapse-level: 3
-      contents:
-        - section: "Reference"
-          href: docs/reference/index.qmd
-          contents:
-          - section: "Formats"
-            contents:
-              - text: "HTML"
-                href: docs/reference/formats/html.qmd
-              - text: "PDF"
-                href: docs/reference/formats/pdf.qmd
-              - text: "MS Word"
-                href: docs/reference/formats/docx.qmd
-              - text: "OpenOffice"
-                href: docs/reference/formats/odt.qmd
-              - text: "ePub"
-                href: docs/reference/formats/epub.qmd
-              - section: "Presentations"
-                contents:
-                  - text: "Revealjs"
-                    href: docs/reference/formats/presentations/revealjs.qmd
-                  - text: "PowerPoint"
-                    href: docs/reference/formats/presentations/pptx.qmd
-                  - text: "Beamer"
-                    href: docs/reference/formats/presentations/beamer.qmd
-              - section: "Markdown"
-                contents:
-                  - text: "GitHub"
-                    href: docs/reference/formats/markdown/gfm.qmd
-                  - text: "CommonMark"
-                    href: docs/reference/formats/markdown/commonmark.qmd
-                  - text: "Markua"
-                    href: docs/reference/formats/markdown/markua.qmd
-              - section: "Wikis"
-                contents:
-                  - text: "MediaWiki"
-                    href: docs/reference/formats/wiki/mediawiki.qmd
-                  - text: "DokuWiki"
-                    href: docs/reference/formats/wiki/dokuwiki.qmd
-                  - text: "ZimWiki"
-                    href: docs/reference/formats/wiki/zimwiki.qmd
-                  - text: "Jira Wiki"
-                    href: docs/reference/formats/wiki/jira.qmd
-                  - text: "XWiki"
-                    href: docs/reference/formats/wiki/xwiki.qmd
-              - section: "More Formats"
-                contents:
-                  - text: "JATS"
-                    href: docs/reference/formats/jats.qmd
-                  - text: "Jupyter"
-                    href: docs/reference/formats/ipynb.qmd
-                  - text: "ConTeXt"
-                    href: docs/reference/formats/context.qmd
-                  - text: "RTF"
-                    href: docs/reference/formats/rtf.qmd
-                  - text: "reST"
-                    href: docs/reference/formats/rst.qmd
-                  - text: "AsciiDoc"
-                    href: docs/reference/formats/asciidoc.qmd
-                  - text: "Org-Mode"
-                    href: docs/reference/formats/org.qmd
-                  - text: "Muse"
-                    href: docs/reference/formats/muse.qmd
-                  - text: "GNU TexInfo"
-                    href: docs/reference/formats/texinfo.qmd
-                  - text: "Groff Man Page"
-                    href: docs/reference/formats/man.qmd
-                  - text: "Groff Manuscript"
-                    href: docs/reference/formats/ms.qmd
-                  - text: "Haddock markup"
-                    href: docs/reference/formats/haddock.qmd
-                  - text: "OPML"
-                    href: docs/reference/formats/opml.qmd
-                  - text: "Textile"
-                    href: docs/reference/formats/textile.qmd
-                  - text: "DocBook"
-                    href: docs/reference/formats/docbook.qmd
-                  - text: "InDesign"
-                    href: docs/reference/formats/icml.qmd
-                  - text: "TEI Simple"
-                    href: docs/reference/formats/tei.qmd
-                  - text: "FictionBook"
-                    href: docs/reference/formats/fb2.qmd
-          - section: "Code Cells"
-            href: docs/reference/cells/index.qmd
-            contents:
-              - text: "Jupyter"
-                href: docs/reference/cells/cells-jupyter.qmd
-              - text: "Knitr"
-                href: docs/reference/cells/cells-knitr.qmd
-              - text: "Observable"
-                href: docs/reference/cells/cells-ojs.qmd
-          - section: "Projects"
-            contents:
-              - text: "Options"
-                href: docs/reference/projects/options.qmd
-              - text: "Websites"
-                href: docs/reference/projects/websites.qmd
-              - text: "Books"
-                href: docs/reference/projects/books.qmd
-          - section: "More"
-            contents:
-              - text: "Dates"
-                href: docs/reference/dates.qmd
-              - text: "Globs"
-                href: docs/reference/globs.qmd
-              - text: "Citations"
-                href: docs/reference/metadata/citation.qmd
-    - id: prerelease
-      title: "Quarto 1.3"
-      contents:
-        - section: "Highlights"
-          href: docs/prerelease/1.3/index.qmd
-          contents:
-            - text: "Confluence Publishing"
-              href: docs/publishing/confluence.qmd
-            - text: "Multi-Format"
-              href: docs/output-formats/html-multi-format.qmd
-            - text: "Cell Embedding"
-              href: docs/authoring/notebook-embed.qmd
-            - text: "Grid Customization"
-              href: docs/output-formats/page-layout.qmd#grid-customization
-            - text: "Code Annotation"
-              href: docs/authoring/code-annotation.qmd
-            - section: "Quarto AST"
-              href: docs/prerelease/1.3/ast.qmd
-              contents:
-                - text: Callouts
-                  href: docs/prerelease/1.3/custom-ast-nodes/callout.qmd
-                - text: Tabsets
-                  href: docs/prerelease/1.3/custom-ast-nodes/tabset.qmd
-                - text: Conditional Blocks
-                  href: docs/prerelease/1.3/custom-ast-nodes/conditional-block.qmd
-            - text: "Mermaid Theming"
-              href: docs/authoring/diagrams.qmd#mermaid-theming
-            - text: "PDF Images"
-              href: docs/prerelease/1.3/pdf.qmd
-            - text: "`kbd` Shortcode"
-              href: docs/authoring/markdown-basics.qmd#keyboard-shortcuts
+    style: docked
+    search: true
+    collapse-level: 2
+    contents:
+      - href: index.qmd
+        text: Home
+      - href: setup.qmd
+        text: Setup
+      - section: "Modules"
+        contents:
+          - href: 0-intro-to-quarto/index.qmd
+          - href: 1-hello-dashboards/index.qmd
+          - href: 2-components-theming/index.qmd
+          - href: 3-deployment/index.qmd
 
-bibliography: references.bib
+
+  page-footer:
+    right: "This page is built with 🩷 and [Quarto](https://quarto.org/)."
+    left: "&copy; Copyright 2024"
+    background: "#FF6A8A"
 
 format:
   html:
-    toc: true
     theme:
-      light: [cosmo, theme.scss]
+      light: [cosmo, style/light.scss]
+      dark: [cosmo, style/light.scss, style/dark.scss]
+    linkcolor: "#FF75EF"
+    toc: true
     code-copy: true
     code-overflow: wrap
-    css: styles.css
-    include-after-body: js.html
-    grid:
-      sidebar-width: 250px
-      body-width: 900px
-      margin-width: 300px
+    mainfont: "Space Grotesk"
+  
+execute:
+  freeze: auto
+  echo: true
 
-filters:
-  - filters/tools-tabset.lua
-
-freeze: true
-
-editor: visual
-
-profile:
-  group: 
-    - [prerelease,rc]
+editor: source
 ```
 
 ## Quarto projects
@@ -1232,6 +1011,15 @@ profile:
     -   `dashboard`: Dashboards (Quarto 1.4+)
 
 # Wrap up
+
+## A tour of Quarto
+
+::: demo
+-   Understanding the relationship between Quarto and the Jupyter engine
+-   Using Quarto in VS Code
+-   Creating Quarto documents (metadata, markdown text, and code)
+-   Working with Quarto projects
+:::
 
 
 ##  {menu="thank you" background-image="images/thank-you.png"}
